--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 beautifulsoup4==4.12.2
-fake_useragent==1.3.0
 itemadapter==0.8.0
-requests_html==0.10.0
+schedule==1.2.1
 Scrapy==2.11.0
-scrapy_splash==0.9.0
+Twisted==22.10.0
